# warp-proto-apis

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  WARP.md  buf.gen.yaml  buf.yaml  go.mod  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check-generated-code.yml
apis/multi_agent/: go.mod
apis/multi_agent/v1/: attachment.proto  citations.proto  conversation_data.proto  debug.proto  document_content.proto  file_content.proto  go.mod  input_context.proto  lsp.proto  message.proto  multi_agent.proto  options.proto  request.proto  response.proto  skill.proto  suggestions.proto  task.proto  todo.proto
proto/multi_agent/v1/: multi_agent.proto
protos/multi_agent/: multi_agent.proto
script/: bootstrap  generate
