[workspace]
resolver = "2"
members = [
    "apis/*/*/gen/rust",
]
default-members = [
    "apis/*/*/gen/rust",
]

[workspace.package]
authors = ["Warp Team <dev@warp.dev>"]
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
prost-reflect = "0.16.3"
prost-reflect-build = "0.16.0"
